# lightning-trainable

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yaml
experiments/: __init__.py
experiments/benchmarks/: circles.py  hypershells.py
src/lightning_trainable/: __init__.py  hparams.py  meta.py  trainable.py  utils.py
src/lightning_trainable/benchmarks/: grid.py
src/lightning_trainable/callbacks/: __init__.py  epoch_progress_bar.py  log_hparams.py
src/lightning_trainable/datasets/core/: __init__.py  distribution_dataset.py  joint.py
src/lightning_trainable/datasets/toy/: __init__.py  circles.py  gaussian_mixture.py  gmm.py  hypershells.py  hypersphere.py  moons.py  normal.py  uniform.py  utils.py
src/lightning_trainable/datasets/vision/: afhq.py  image.py
src/lightning_trainable/hparams/: __init__.py  attribute_dict.py  choice.py  hparams.py  range.py  type_name.py
src/lightning_trainable/hparams/types/: __init__.py  choice.py  hparam_type.py  range.py
src/lightning_trainable/launcher/: fit.py  grid.py  utils.py
src/lightning_trainable/metrics/: __init__.py  accuracy.py  error.py  hungarian.py  sinkhorn.py  wasserstein.py
src/lightning_trainable/modules/: __init__.py  dense_module.py  hparams_module.py  sequential_mixin.py
src/lightning_trainable/modules/convolutional/: __init__.py  block.py  block_hparams.py  hparams.py  network.py
src/lightning_trainable/modules/fully_connected/: __init__.py  hparams.py  network.py
src/lightning_trainable/modules/simple_unet/: __init__.py  down_block.py  hparams.py  network.py  up_block.py
src/lightning_trainable/modules/unet/: __init__.py  hparams.py  network.py  skip_connection.py  temporary_flatten.py
src/lightning_trainable/trainable/: __init__.py  dense.py  trainable.py  trainable_hparams.py
src/lightning_trainable/trainable/lr_schedulers/: __init__.py  configure.py  defaults.py
src/lightning_trainable/trainable/optimizers/: configure.py  defaults.py
src/lightning_trainable/utils/: __init__.py  deprecate.py  io.py  iteration.py  modules.py  preprocessing.py
tests/: subnet_factory.py  test_attribute_dict.py  test_benchmarks.py  test_datasets.py  test_hparams.py  test_launcher.py  test_load.py  test_trainable.py  test_unet.py  test_utils.py
tests/module_tests/: test_trainable.py
tests/test_modules/: test_fully_connected.py
tests/test_trainable/: fixtures.py  test_trainable.py
trainable/: __init__.py  hparams.py  trainable.py  utils.py
trainable/benchmarks/: __init__.py  benchmark.py  circles.py  distribution_dataset.py  grid.py  hypershells.py  hypersphere.py  joint.py  moons.py  normal.py  protocols.py  uniform.py  utils.py
trainable/benchmarks/toy_examples/: sphere.py
trainable/datasets/: __init__.py
trainable/datasets/core/: joint.py
trainable/datasets/toy/: circles.py  hypershells.py  hypersphere.py  moons.py  normal.py  uniform.py  utils.py
trainable/datasets/vision/: __init__.py
