[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lightning_trainable"
version = "0.4.0-rc1"
description = "A light-weight lightning_trainable module for pytorch-lightning."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["Machine-Learning", "PyTorch", "PyTorch-Lightning"]

authors = [
    { name = "Lars Kühmichel", email = "lars.kuehmichel@stud.uni-heidelberg.de" }
]

maintainers = [
    { name = "Lars Kühmichel", email = "lars.kuehmichel@stud.uni-heidelberg.de" },
    { name = "Felix Draxler", email = "felix.draxler@iwr.uni-heidelberg.de" },
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Environment :: GPU :: NVIDIA CUDA :: 12",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    # pytorch
    "torch ~= 2.0",
    "torchvision ~= 0.15",
    # lightning
    "lightning ~= 2.0",
    "tensorboard ~= 2.12",
    # io
    "tomli ~= 2.0",
    "pyyaml ~= 6.0",
    # other
]

[project.optional-dependencies]
tests = [
    # linting
    "flake8 ~= 6.0",
    "flake8-pyproject ~= 1.2",
    # tests
    "pytest ~= 7.2",
    "pytest-cov ~= 4.0",
    # other
    "numpy ~= 1.24",
    "matplotlib ~= 3.7",
]

experiments = [
    # required
    "ray[tune] ~= 2.4",
    # recommended
    "numpy ~= 1.24",
    "matplotlib ~= 3.7",
    "jupyterlab ~= 3.6",
    "scikit-learn ~= 1.2",
    "scipy ~= 1.10",
]


[project.urls]
"Homepage" = "https://github.com/LarsKue/lightning-trainable"

[tool.flake8]
ignore = [
    # no line before class docstrings
    "D203",
    # star imports
    "F403",
    "F405"
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
]
count = true
max-complexity = 10
max-line-length = 127  # github editor limit
per-file-ignores = [
    # imported, but unused
    "__init__.py: F401"
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-m 'not slow' --doctest-modules --cov lightning_trainable --cov-report html"
